--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="content">
-                <h1 class="title">Unlimited movies, TV shows and more</h1>
+                <h1 class="title">Unlimited movies, web series, TV shows and more</h1>
                 <p class="sub-title">Watch anywhere. Cancel anytime.</p>
                 <p class="desc">Ready to watch? Enter your email to create or restart your membership.</p>
                 <div class="content-flex">
